--- a/StartCSE/app.config
+++ b/StartCSE/app.config
@@ -8,13 +8,14 @@
     <add name="StartCSE.Properties.Settings.SCSaleOpsPPConnectionString"
         connectionString="Data Source=BSHELDON-EB\SQLEXPRESS;Initial Catalog=SCSaleOpsPP;Integrated Security=True"
         providerName="System.Data.SqlClient" />
-  <!-- 
+   
   <add name="StartCSE.Properties.Settings.CommSalesPricingPlatformConnectionString"
-        connectionString="Data Source=LAS5SDB09;Initial Catalog=CommSalesPricingPlatform;Integrated Security=True"
+        connectionString="Data Source=LAS5SDB09;Initial Catalog=CommSalesPricingPlatform;User ID=commsalesops;Password=TEpra-HUwaFe7etr"
         providerName="System.Data.SqlClient" />
-   -->
+  <!--
     <add name="StartCSE.Properties.Settings.CommSalesPricingPlatformConnectionString"
        connectionString="Data Source=SLC3SDB00;Initial Catalog=CommSalesPricingPlatform;User ID=Dev;Password=solarcity" 
        providerName="System.Data.SqlClient" />
+   -->
 </connectionStrings>
 <startup><supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.0"/></startup></configuration>
